@@ -13,8 +13,15 @@ import java.nio.charset.StandardCharsets;
 import java.util.HashSet;
 import java.util.Set;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.net.URI;
+import java.net.URISyntaxException;
 public class GroupList {
 
+    private static final Logger log = LoggerFactory.getLogger(GroupList.class);
+    
     static Settings settings = Config.getInstance();
     private static final String BASEURL = settings.getHttpUrl();
     private static final String GROUP_LIST_API = BASEURL + "/get_group_list";
@@ -26,13 +33,13 @@ public class GroupList {
         Set<Long> groupIds = new HashSet<>();
         String nextToken = "";
 
-        System.out.println("[GroupList] 开始联网同步群列表...");
+        log.info("开始联网同步群列表……");
 
         try {
             while (true) {
                 String reqJson = "{}";
 
-                HttpURLConnection conn = (HttpURLConnection) new URL(GROUP_LIST_API).openConnection();
+                HttpURLConnection conn = (HttpURLConnection) new URI(GROUP_LIST_API).toURL().openConnection();
                 conn.setRequestMethod("POST");
                 conn.setConnectTimeout(5000);
                 conn.setReadTimeout(15000);
@@ -44,7 +51,7 @@ public class GroupList {
                 }
 
                 if (conn.getResponseCode() != 200) {
-                    System.err.println("[GroupList] API 请求失败: " + conn.getResponseCode());
+                    log.error("API 请求失败：{}", conn.getResponseCode());
                     break;
                 }
 
@@ -68,14 +75,14 @@ public class GroupList {
                 break;
             }
         } catch (Exception e) {
-            System.err.println("[GroupList] 获取群列表异常: " + e.getMessage());
+            log.error("获取群列表异常: {}", e.getMessage());
         }
 
-        System.out.println("[GroupList] 同步完成，共获取到 " + groupIds.size() + " 个群聊。");
+        log.info("同步完成，共获取到 {} 个群聊。", groupIds.size());
 
         // 修改点：如果是 Debug 模式，即使扫描到了所有群，也只返回 Debug 群号
         if (isDebugMode) {
-            System.out.println("[GroupList] Debug 模式已开启，仅返回调试群号: " + debugGroupId);
+            log.info("Debug 模式已开启，仅返回调试群号: {}", debugGroupId);
             Set<Long> debugSet = new HashSet<>();
             debugSet.add(debugGroupId);
             return debugSet;
